<resources>

    <!-- TODO: Textos de la aplicación. -->

    <string name="app_name">Developer Agenda</string>

    <string name="app_txt_portada">Bienvenido a DevAge, la agenda para desarrolladores.\n\n
        Consulta la base de datos común de desarrolladores de diferentes especialidades.
    </string>

    <string name="app_txt_acerca">Android App Developers Agenda.\n\n
        Accede a la comunidad DevAge y consulta el listado de desarrolladores y su especialidad.\n\n
        Navegue por el menú lateral para consultar las diferentes opciones.\n\n
        Una vez registrado en la App tendrá acceso a una base de datos común de desarrolladores de diferentes especialidades con los que podrá intercambiar información.\n\n
        La App forma parte de un proyecto final para el Curso de Perfeccionamiento de Android de la Escuela de Ingenierías Industriales, Universidad de Extremadura.\n\n
        Antonio Horrillo Horrillo.\n\n
        www.antoniohorrillo.com.
    </string>

    <string name="btn_entrar">Entrar</string>
    <string name="btn_inciarsesion">Iniciar Sesión</string>
    <string name="btn_registro">Registro</string>
    <string name="btn_volver">Volver</string>
    <string name="btn_buscar">Buscar</string>

    <string name="cmp_dni">DNI:</string>
    <string name="cmp_nombre">Nombre:</string>
    <string name="cmp_email">Email:</string>
    <string name="cmp_contraseña">Contraseña:</string>
    <string name="cmp_apellidos">Apellidos:</string>
    <string name="cmp_especialidad">Especialidad:</string>

    <string name="txtconect">Conectando...</string>
    <string name="action_settings">Settings</string>
    <string name="txtmenubuscar">Buscar</string>
    <string name="txtmenusinc">Sincronizar</string>

    <string name="logincorrecto">Inicio de Sesión Correcto.</string>
    <string name="loginincorrecto">Inicio de Sesión Incorrecto.</string>

    <string name="signupcorrecto">Registro Correcto.</string>
    <string name="signupincorrecto">Registro Incorrecto.</string>

    <string name="errorsignupdni">Escriba un DNI correcto.</string>
    <string name="errorsignupnombre">Escriba un nombre con mas de 3 caracteres.</string>
    <string name="errorsignupapellidos">Escriba al menos un apellido con mas de 3 caracteres.</string>
    <string name="errorloginemail">Escriba una dirección de correo válida.</string>
    <string name="errorloginpass">Escriba una contraseña válida. Entre 4 y 10 caracteres.</string>
    <string name="errorsignupespecialidad">Escriba al menos una especialidad mas de 2 caracteres.</string>

    <string name="txtnocuenta">¿No tienes cuenta? Crea una Cuenta ahora.</string>
    <string name="txtnoregistro">¿Ya tienes cuenta? Inicia Sesión ahora.</string>

    <string name="txtlistadosi">Listado Obtenido.</string>
    <string name="txtlistadono">Listado No Obtenido.</string>
    <string name="txtreinicio">Pulse en sincronizar o reinicie la aplicación.</string>
    <string name="txtsincok">Sincronización Realizada.</string>
    <string name="txtsincnonecesario">Sincronización No Necesaria.</string>

    <!-- TODO: Textos del menu lateral desplegable. -->

    <string name="opciones">Navegación</string>
    <string name="seccion_1">Listado Devs</string>
    <string name="seccion_2">Registrar Dev</string>
    <string name="seccion_3">Buscar Dev</string>
    <string name="seccion_4">Acerca de</string>

    <string name="otras_opciones">Opciones</string>
    <string name="opcion_1">Cerrar Sesión</string>
    <string name="opcion_2">Salir</string>

    <string name="usuario">Usuario</string>
    <string name="menu_abierto">Menu Abierto</string>
    <string name="menu_cerrado">Menu Cerrado</string>

    <!-- TODO: Textos de los cuadros de diálogo. -->

    <string name="diagsalirtitulo">Salir de DevAge...</string>
    <string name="diagsalirmensaje">¿Desea salir de la aplicación?</string>

</resources>