<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- TODO: Menu lateral desplegable. -->

    <group android:checkableBehavior="single"
        android:icon="@drawable/ic_action_agenda"
        android:title="@string/opciones">
        <item
            android:id="@+id/menu_seccion_1"
            android:icon="@drawable/ic_action_listado"
            android:title="@string/seccion_1"/>
        <item
            android:id="@+id/menu_seccion_2"
            android:icon="@drawable/ic_action_add"
            android:title="@string/seccion_2"/>
        <item
            android:id="@+id/menu_seccion_3"
            android:icon="@drawable/ic_action_buscar"
            android:title="@string/seccion_3"/>
        <item
            android:id="@+id/menu_seccion_4"
            android:icon="@drawable/ic_action_copyright"
            android:title="@string/seccion_4"/>
    </group>

    <item
        android:id="@+id/navigation_subheader"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/otras_opciones">
        <menu>
            <item
                android:id="@+id/menu_opcion_1"
                android:icon="@drawable/ic_action_logout"
                android:title="@string/opcion_1"/>
            <item
                android:id="@+id/menu_opcion_2"
                android:icon="@drawable/ic_action_close"
                android:title="@string/opcion_2"/>
        </menu>
    </item>

</menu>