<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.antoniohorrillo.devage.activity.Principal_Fragment_Detalle"
    android:id="@+id/fragmentdetalle">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

                <ImageView android:src="@drawable/devagedetalle"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/logo" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp" >

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/cmp_dni"
                            android:id="@+id/txtnif"
                            android:textColor="@color/iron"
                            android:textSize="20dp"
                            android:gravity="right"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:id="@+id/txtdnisql"
                            android:layout_weight="100"
                            android:layout_marginLeft="10dp"
                            android:textSize="20dp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/cmp_nombre"
                            android:id="@+id/txtnombre"
                            android:textColor="@color/iron"
                            android:textSize="20dp"
                            android:gravity="right"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:id="@+id/txtnombresql"
                            android:layout_weight="100"
                            android:layout_marginLeft="10dp"
                            android:textSize="20dp" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/cmp_apellidos"
                            android:id="@+id/txtapellidos"
                            android:textColor="@color/iron"
                            android:textSize="20dp"
                            android:gravity="right"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:id="@+id/txtapellidossql"
                            android:layout_weight="100"
                            android:layout_marginLeft="10dp"
                            android:textSize="20dp" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/cmp_email"
                            android:id="@+id/txtemail"
                            android:textColor="@color/iron"
                            android:textSize="20dp"
                            android:gravity="right"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:id="@+id/txtemailsql"
                            android:layout_weight="100"
                            android:layout_marginLeft="10dp"
                            android:textSize="20dp" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/cmp_especialidad"
                            android:id="@+id/txtespecialidad"
                            android:textColor="@color/iron"
                            android:textSize="20dp"
                            android:gravity="right"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:id="@+id/txtespecialidadsql"
                            android:layout_weight="100"
                            android:layout_marginLeft="10dp"
                            android:textSize="20dp" />

                    </TableRow>

                </TableLayout>

            </LinearLayout>

        </ScrollView>

</FrameLayout>
